Attempting to add env variables
