# docs/swagger.json
@@ -5,12 +5,11 @@
         "title": "The Ender API",
         "contact": {
             "name": "Elias De Windt",
+            "url": "https://edewindt.com/contact-me/",
             "email": "elias@edewindt.com"
         },
         "version": "1.0"
     },
-    "host": "localhost:3000",
-    "basePath": "/",
     "paths": {
         "/armies": {
             "get": {
@@ -30,24 +29,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/handlers.Army"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
                         }
                     }
                 }
@@ -81,24 +62,6 @@
                         "schema": {
                             "$ref": "#/definitions/handlers.Army"
                         }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
                     }
                 }
             }
@@ -121,24 +84,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/handlers.Character"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
                         }
                     }
                 }
@@ -172,24 +117,6 @@
                         "schema": {
                             "$ref": "#/definitions/handlers.Character"
                         }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
                     }
                 }
             }
@@ -212,24 +139,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/handlers.Species"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
                         }
                     }
                 }
@@ -262,24 +171,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/handlers.Species"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.HTTPError"
                         }
                     }
                 }
@@ -332,17 +223,6 @@
                     "type": "string"
                 },
                 "trivia": {
-                    "type": "string"
-                }
-            }
-        },
-        "handlers.HTTPError": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                },
-                "status": {
                     "type": "string"
                 }
             }
